my blog in sinatra

--- a/views/contact.erb
+++ b/views/contact.erb
@@ -15,6 +15,9 @@ p{
 	<p>Twitter: @CaptainJoannah </p>
 	<p>Skype: joannah.nanjekye</p>
 	<p>Email: nanjekyejoannah@gmail.com</p>
+	<p>StackOverflow: Joannah</p>
+	<p>Github: <a href="https://github.com/nanjekyejoannah">Github</a></p>
+
 
 
 </div>
