--- a/views/layout.erb
+++ b/views/layout.erb
@@ -9,15 +9,6 @@
 <meta name="verify-v1" content="HJ1dq2v1pVtUC12cAggXn9Drd/kHexRQdCPS5c2XHL0=" />
 
 <link rel="stylesheet" href="http://jamescrisp.org/wordpress/wp-content/themes/freshy/style.css" type="text/css" media="screen" title="Freshy"/>
-<!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="css/bootstrap.min.css">
-
-<!-- Optional theme -->
-<link rel="stylesheet" href="css/bootstrap-theme.min.css">
-
-<!-- Latest compiled and minified JavaScript -->
-<script src="js/bootstrap.min.js"></script>
-
 
 
 
@@ -155,6 +146,7 @@
   </head>
 <body>
 
+
 <div id="paggy">
   
   <!-- header -->
@@ -178,11 +170,20 @@
   <div id="frame">
 
   <!-- main menu -->
-      <ul class="menu">
+      <ul class="menu" >
+
+
+    
+
+
       
       <li class="page_item"><a class="first_menu" href="/">Blog </a></li>  
       <li class="page_item"><a href="about" title="About">About</a></li>
       <li class="page_item"><a href="contact" title="Contact">Contact</a></li>
+      <li class="page_item"><a href="app" title="App">Apps</a></li>
+      
+      
+
         
       <li class="last_menu">
         
